--- a/composer.json
+++ b/composer.json
@@ -5,8 +5,8 @@
     "license": "MIT",
     "require": {
         "php": "^8.3",
-        "illuminate/console": "^11.31",
-        "illuminate/support": "^11.31"
+        "illuminate/console": "*",
+        "illuminate/support": "*"
     },
     "require-dev": {
         "phpunit/phpunit": "^11.4",
